# zilliz-mcp-server

./: .gitignore  LICENSE  README.md  TESTING.md  example.env  pyproject.toml  pytest.ini  run_tests.sh  test_client.py
docs/: USERGUIDE.md
src/zilliz_mcp_server/: __init__.py  app.py  server.py  settings.py
src/zilliz_mcp_server/common/: __init__.py  openapi_client.py
src/zilliz_mcp_server/tools/: __init__.py
src/zilliz_mcp_server/tools/milvus/: __init__.py  milvus_tools.py
src/zilliz_mcp_server/tools/zilliz/: __init__.py  zilliz_tools.py
test/: example_usage.py
tests/: conftest.py
tests/unit/: test_openapi_client.py  test_settings.py
tests/unit/tools/: __init__.py  test_milvus_tools.py  test_zilliz_tools.py
