[project]
name = "zilliz-mcp-server"
version = "1.0.0"
description = "MCP server for Zilliz Cloud and Milvus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.6.1",
    "pymilvus>=2.5.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
zilliz-mcp-server = "zilliz_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zilliz_mcp_server"] 