[project]
name = "zilliz-mcp-server"
version = "1.0.0"
description = "MCP server for Zilliz Cloud and Milvus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.6.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
]

[project.scripts]
zilliz-mcp-server = "zilliz_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zilliz_mcp_server"] 

[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
    "responses>=0.25.7",
]
